--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+html, body {
+    margin: 0;
+  }
 .title {
     font-family: serif;
     font-size: 2em;
@@ -5,4 +8,7 @@
     display: flex;
     place-content: center;
     border-bottom: 2px solid black;
+}
+#draw {
+    border: 2px solid gray;
 }
