--- a/style.css
+++ b/style.css
@@ -1,6 +1,11 @@
 html, body {
     margin: 0;
-  }
+}
+.container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 .title {
     font-family: serif;
     font-size: 2em;
@@ -8,6 +13,8 @@ html, body {
     display: flex;
     place-content: center;
     border-bottom: 2px solid black;
+    width: 100%;
+
 }
 #draw {
     border: 2px solid gray;
